# loveclaw

./: .env.example  .gitignore  CLAUDE.md  FEEDBACK.md  README.md  README_0G.md  README_AXL.md  README_UNISWAP.md  index.html  middleware.js  package.json  run.sh  vercel.axl-rewrite.example.json  vercel.json  vite.config.js
android/: README.md  settings.gradle
android/app/: build.gradle
api/: demo-axl-proxy.js  demo-axl.js
evm/: foundry.toml
evm/script/: Deploy.s.sol
evm/src/: LoveClawPact.sol  LoveClawPactEventsAndErrors.sol
evm/test/: LoveClawPact.t.sol
examples/: README.md
examples/0g-storage-memory/: .env.local.example  .gitignore  README.md  package.json  tsconfig.json
examples/axl-demo/: README.md  a2a.py  node-alice.json  node-boris.json  rgb.py  setup.sh  test.py  ui.css  ui.html  ui.js
examples/axl-rust/: Cargo.toml
examples/axl-rust/src/: main.rs
examples/loveclaw-style/: pixel-ui.css  signal-console-ui.css
prototype/: CLAUDE.md  signal-relay.py
prototype/console/: signal-console.html  signal-console.js
prototype/diary/: animations.css  app.js  index.html  manifest.json  map.js  style.css  styles.css  sw.js
prototype/relay/: attestation.py  breach_ai.py  config.py  geo.py  http_handler.py  (+12 more)
public/: manifest.json  sw.js
scripts/: ngrok-two-axl.example.yml  notify.py  phone-demo-ngrok.sh  push-server.py  tauri-dev.sh
src/: main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
welcome/: index.html  video.html
(+123 files in other folders)
