[package]
name = "loveclaw"
version = "0.1.0"
description = "LoveClaw — relationship trust monitor"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio              = { version = "1", features = ["rt", "rt-multi-thread"] }
