[package]
name = "axl-agent"
version = "0.1.0"
edition = "2021"
description = "LoveClaw × AXL — Rust agent example"

[[bin]]
name = "axl-agent"
path = "src/main.rs"

[dependencies]
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio    = { version = "1",    features = ["rt-multi-thread", "macros", "time"] }
serde    = { version = "1",    features = ["derive"] }
serde_json = "1"
